--- a/resume/resume-cn.html
+++ b/resume/resume-cn.html
@@ -56,19 +56,11 @@
 <li><p><a href="https://juejin.im/post/59f2e59751882578c17ee275">有关Android应用桌面角标(BadgeNumber)实现的探讨</a></p></li>
 </ul>
 <h2 id="技能">技能</h2>
-<p>以下都是我平时用过或熟悉的编程语言、框架、软件及工具，带 (*) 符号的是我比较喜欢和常用的</p>
+<p>以下都是我平时用过或熟悉的编程语言、软件及工具，带 (*) 符号的是我比较喜欢和常用的</p>
 <h3 id="编程语言">编程语言</h3>
 <ul>
 <li><a href="https://www.java.com">Java</a>(*)</li>
 <li><a href="http://kotlinlang.org">Kotlin</a></li>
-</ul>
-<h3 id="框架">框架</h3>
-<ul>
-<li><a href="https://github.com/ReactiveX/RxAndroid">RxAndroid</a>(*)</li>
-<li><a href="https://github.com/greenrobot/EventBus">EventBus</a>(*)</li>
-<li><a href="https://github.com/square/okhttp">Okhttp</a>(*)</li>
-<li><a href="https://github.com/google/gson">Gson</a>(*)</li>
-<li><a href="https://github.com/bumptech/glide">Glide</a>(*)</li>
 </ul>
 <h3 id="工具软件">工具软件</h3>
 <ul>
